--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.btn-sm, .btn-sm:focus {
+  text-align: left;
+  outline: none;
+  box-shadow: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+  width: 100vw;
+  z-index: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.row {
+  padding: 5px 0 5px 0;
+  border-bottom: 1px dotted black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tableHeader { 
+  font-size: 10pt; 
+  border-bottom: 2px solid black; 
+  padding-top: 56px;
 }
